Update XSD11Validator.java
Remove dead code, Comply to JRE 20+ URL builder usage, Upldate todo list